--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   margin: 0%;
   text-align: center;
   font-size: larger;
-  background-image: url("/assets/bg\ image.jpg");
+  /* background-image: url("/assets/bg\ image.jpg"); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -65,4 +65,9 @@ a {
 
 .dropdown-item:hover {
   background-color: #f1f1f1;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; 
 }
