--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: darkblue;
   line-height: 1.6;
-  margin: 0;
+  margin: auto;
+  height: auto;
+  width: 100%;
   text-align: center;
   font-size: larger;
   background-size: cover;
@@ -93,3 +95,4 @@ a {
 .container::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
